file-helpers: convert profile_dir to absolute path

When Epiphany is run with --profile and a relative path to the profile
dir, it mostly works fine, with the exception of a bunch of criticals
coming from EphyUriTester. Fix it here so the rest of the code doesn't
have to worry about relative paths.

https://bugzilla.gnome.org/show_bug.cgi?id=762762